Final Test Adjustment

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    <section class="parallax_mobile lg:parallax md:parallax_mid">
+    <section class="parallax_mobile lg:parallax md:parallax_mid xl:parallax_third">
         <!-- <img src="" id="struktur" alt="structure"> -->
         <img src="example/bolls/Another Design/new_bg.png" id="bg" alt="bg" />
         <img src="example/bolls/Another Design/shadow_left.png" id="shadow_left" alt="shadow_left" />
@@ -116,7 +116,7 @@
         </p>
     </section>
 
-    <section class="sec mx-7 mb-2 flex flex-wrap lg:flex-row justify-center items-center sm:justify-start">
+    <section class="sec mx-7 mb-2 flex flex-wrap lg:flex-row xl:flex-col justify-center items-center sm:justify-start">
         <div
             class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
@@ -133,14 +133,6 @@
                     <!-- Modal footer -->
                     <div
                         class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
-                        <div>
-                            <button data-modal-hide="default-modal" type="button"
-                                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">ٱلْحَمْدُ
-                                لِلَّٰهِ</button>
-                            <button data-modal-hide="default-modal" type="button"
-                                class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-red-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">سُبْحَانَ
-                                اللَّه</button>
-                        </div>
                         <h1 class="text-white font-semibold italic hover:text-red-500">
                             - YOLO-GIT
                         </h1>
@@ -164,14 +156,6 @@
                     <!-- Modal footer -->
                     <div
                         class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
-                        <div>
-                            <button data-modal-hide="default-modal" type="button"
-                                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">ٱلْحَمْدُ
-                                لِلَّٰهِ</button>
-                            <button data-modal-hide="default-modal" type="button"
-                                class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-red-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">سُبْحَانَ
-                                اللَّه</button>
-                        </div>
                         <h1 class="text-white font-semibold italic hover:text-red-500">
                             - YOLO-GIT
                         </h1>
@@ -195,14 +179,6 @@
                     <!-- Modal footer -->
                     <div
                         class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
-                        <div>
-                            <button data-modal-hide="default-modal" type="button"
-                                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">ٱلْحَمْدُ
-                                لِلَّٰهِ</button>
-                            <button data-modal-hide="default-modal" type="button"
-                                class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-red-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">سُبْحَانَ
-                                اللَّه</button>
-                        </div>
                         <h1 class="text-white font-semibold italic hover:text-red-500">
                             - YOLO-GIT
                         </h1>
@@ -218,7 +194,7 @@
             </div>
         </div>
         <div id="default-four" tabindex="-1" aria-hidden="true"
-            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-full md:h-auto max-h-full">
             <div class="relative p-4 w-full max-w-2xl max-h-full">
                 <!-- Modal content -->
                 <div class="relative bg-slate-800 rounded-lg shadow">
@@ -226,14 +202,6 @@
                     <!-- Modal footer -->
                     <div
                         class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
-                        <div>
-                            <button data-modal-hide="default-modal" type="button"
-                                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">ٱلْحَمْدُ
-                                لِلَّٰهِ</button>
-                            <button data-modal-hide="default-modal" type="button"
-                                class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-red-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">سُبْحَانَ
-                                اللَّه</button>
-                        </div>
                         <h1 class="text-white font-semibold italic hover:text-red-500">
                             - YOLO-GIT
                         </h1>
@@ -257,14 +225,6 @@
                     <!-- Modal footer -->
                     <div
                         class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
-                        <div>
-                            <button data-modal-hide="default-modal" type="button"
-                                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">ٱلْحَمْدُ
-                                لِلَّٰهِ</button>
-                            <button data-modal-hide="default-modal" type="button"
-                                class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-red-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">سُبْحَانَ
-                                اللَّه</button>
-                        </div>
                         <h1 class="text-white font-semibold italic hover:text-red-500">
                             - YOLO-GIT
                         </h1>
@@ -288,14 +248,6 @@
                     <!-- Modal footer -->
                     <div
                         class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
-                        <div>
-                            <button data-modal-hide="default-modal" type="button"
-                                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">ٱلْحَمْدُ
-                                لِلَّٰهِ</button>
-                            <button data-modal-hide="default-modal" type="button"
-                                class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-red-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">سُبْحَانَ
-                                اللَّه</button>
-                        </div>
                         <h1 class="text-white font-semibold italic hover:text-red-500">
                             - YOLO-GIT
                         </h1>
@@ -354,10 +306,12 @@
                         Sedekah itu amalan baik. Jadi sekiranya tidak keberatan, support saya dengan tekan link
                         dibawah.<br>👇👇👇
                     </p>
-                    <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
-                        data-name="bmc-button" data-slug="YOLOGIT" data-color="#FF5F5F" data-emoji="" data-font="Cookie"
-                        data-text="Buy me a coffee ❤️" data-outline-color="#000000" data-font-color="#ffffff"
-                        data-coffee-color="#FFDD00"></script>
+                    <div class="mx-auto lg:mx-0 xl:mx-0 sm:mx-0">
+                        <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
+                            data-name="bmc-button" data-slug="YOLOGIT" data-color="#FF5F5F" data-emoji=""
+                            data-font="Cookie" data-text="Buy me a coffee ❤️" data-outline-color="#000000"
+                            data-font-color="#ffffff" data-coffee-color="#FFDD00"></script>
+                    </div>
                 </div>
                 <div class="hidden lg:flex">
                     <video class="w-full h-auto max-w-full rounded-lg" controls>
@@ -370,8 +324,14 @@
     </section>
 
     <section class="sec bg-slate-700">
-        <h2 class="text-xs sm:text-3xl text-center sm:text-left font-semibold text-white">
-            Jangan Lupa Puasa :D
+        <h2 class="text-xs sm:text-3xl text-center sm:text-left font-semibold text-white flex flex-row">
+            Jangan Lupa Puasa!
+            <svg class="w-28 h-28 sm:w-10 sm:h-10 ml-3" data-slot="icon" fill="currentColor" viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                <path
+                    d="M1 8.25a1.25 1.25 0 1 1 2.5 0v7.5a1.25 1.25 0 1 1-2.5 0v-7.5ZM11 3V1.7c0-.268.14-.526.395-.607A2 2 0 0 1 14 3c0 .995-.182 1.948-.514 2.826-.204.54.166 1.174.744 1.174h2.52c1.243 0 2.261 1.01 2.146 2.247a23.864 23.864 0 0 1-1.341 5.974C17.153 16.323 16.072 17 14.9 17h-3.192a3 3 0 0 1-1.341-.317l-2.734-1.366A3 3 0 0 0 6.292 15H5V8h.963c.685 0 1.258-.483 1.612-1.068a4.011 4.011 0 0 1 2.166-1.73c.432-.143.853-.386 1.011-.814.16-.432.248-.9.248-1.388Z">
+                </path>
+            </svg>
         </h2>
         <p class="text-xs sm:text-lg text-center sm:text-left text-white">
             Ramadan bukan hanya tentang menagan lapar, tapi juga tentang mengelola
