--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="example/src/output.css" rel="stylesheet" />
 </head>
 
-<body class="overflow-x-hidden">
+<body class="overflow-x-hidden absolute inset-0">
     <nav class="bg-gray-900">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <div class="flex items-center space-x-3 rtl:space-x-reverse">
