--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
         </div>
         <div id="default-one" tabindex="-1" aria-hidden="true"
             class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
-            <div class="relative p-4 w-full max-w-2xl max-h-full">
+            <div class="relative p-4 w-full sm:max-w-2xl max-h-full">
                 <!-- Modal content -->
-                <div class="absolute inset-0 bg-slate-800 rounded-lg shadow">
+                <div class="relative bg-slate-800 rounded-lg shadow">
                     <img src="example/bolls/Card/card_1.png">
                     <!-- Modal footer -->
                     <div
