--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
         </div>
         <div id="default-one" tabindex="-1" aria-hidden="true"
             class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
-            <div class="relative p-4 w-full sm:max-w-2xl max-h-full">
+            <div class="relative p-4 w-full max-w-2xl max-h-full">
                 <!-- Modal content -->
-                <div class="relative bg-slate-800 rounded-lg shadow">
-                    <img src="example/bolls/Card/card_1.png">
+                <div class="relative bg-slate-800 rounded-lg shadow p-2 md:p-4">
+                    <img src="example/bolls/Card/card_1.png" class="w-full md:max-w-md mx-auto">
                     <!-- Modal footer -->
                     <div
-                        class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
+                        class="flex items-center justify-between p-2 md:p-4 border-t border-gray-200 rounded-b dark:border-gray-600">
                         <h1 class="text-white font-semibold italic hover:text-red-500">
                             - YOLO-GIT
                         </h1>
