--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    <section class="overflow-x-hidden parallax_mobile lg:parallax md:parallax_mid xl:parallax_third">
+    <section class="overflow-x-hidden overflow-y-hidden parallax_mobile lg:parallax md:parallax_mid xl:parallax_third">
         <!-- <img src="" id="struktur" alt="structure"> -->
         <img src="example/bolls/Another Design/new_bg.png" id="bg" alt="bg" />
         <img src="example/bolls/Another Design/shadow_left.png" id="shadow_left" alt="shadow_left" />
@@ -46,10 +46,10 @@
         <img src="example/bolls/Another Design/lamp.png" id="lamp" alt="lamp" />
     </section>
 
-    <section class="sec bg-gradient-to-r from-blue-950 to-blue-500 background-animate mb-4 sm:mt-2 sm:mb-0">
+    <section class="sec bg-gradient-to-r from-blue-950 to-blue-500 background-animate mb-4 sm:mt-0 sm:mb-0">
         <h2 class="text-xs text-center sm:text-3xl sm:text-left font-semibold text-white flex flex-row">
             <svg data-tooltip-target="tooltip-one" xmlns="http://www.w3.org/2000/svg"
-                class="w-28 h-28 sm:w-10 sm:h-10 mr-3" fill-rule="evenodd" clip-rule="evenodd"
+                class="w-28 h-28 md:w-10 md:h-10 mr-3" fill-rule="evenodd" clip-rule="evenodd"
                 image-rendering="optimizeQuality" shape-rendering="geometricPrecision"
                 text-rendering="geometricPrecision" viewBox="0 0 6.827 6.827" id="islam">
                 <path fill-rule="nonzero"
@@ -148,7 +148,7 @@
             </div>
         </div>
         <div id="default-two" tabindex="-1" aria-hidden="true"
-            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-60 sm:w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-80 mx-auto sm:mx-0 sm:w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
             <div class="relative p-4 w-full max-w-2xl max-h-full">
                 <!-- Modal content -->
                 <div class="relative bg-slate-800 rounded-lg shadow">
@@ -171,7 +171,7 @@
             </div>
         </div>
         <div id="default-three" tabindex="-1" aria-hidden="true"
-            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-60 sm:w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-80 mx-auto sm:mx-0 sm:w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
             <div class="relative p-4 w-full max-w-2xl max-h-full">
                 <!-- Modal content -->
                 <div class="relative bg-slate-800 rounded-lg shadow">
@@ -194,7 +194,7 @@
             </div>
         </div>
         <div id="default-four" tabindex="-1" aria-hidden="true"
-            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-60 sm:w-full md:inset-0 h-[calc(100dvh)]">
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-80 mx-auto sm:mx-0 sm:w-full md:inset-0 h-[calc(100dvh)]">
             <div class="relative p-4 w-full max-w-2xl max-h-full">
                 <!-- Modal content -->
                 <div class="relative bg-slate-800 rounded-lg shadow">
@@ -217,7 +217,7 @@
             </div>
         </div>
         <div id="default-five" tabindex="-1" aria-hidden="true"
-            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-60 sm:w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-80 mx-auto sm:mx-0 sm:w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
             <div class="relative p-4 w-full max-w-2xl max-h-full">
                 <!-- Modal content -->
                 <div class="relative bg-slate-800 rounded-lg shadow">
@@ -240,7 +240,7 @@
             </div>
         </div>
         <div id="default-six" tabindex="-1" aria-hidden="true"
-            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-60 sm:w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-80 mx-auto sm:mx-0 sm:w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
             <div class="relative p-4 w-full max-w-2xl max-h-full">
                 <!-- Modal content -->
                 <div class="relative bg-slate-800 rounded-lg shadow">
