--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="sec bg-gradient-to-r from-blue-950 to-blue-500 background-animate mb-4 sm:mt-0 sm:mb-0">
         <h2 class="text-xs text-center sm:text-3xl sm:text-left font-semibold text-white flex flex-row">
             <svg data-tooltip-target="tooltip-one" xmlns="http://www.w3.org/2000/svg"
-                class="w-28 h-28 md:w-10 md:h-10 mr-3" fill-rule="evenodd" clip-rule="evenodd"
+                class="w-20 h-20 sm:w-10 sm:h-10 mr-3" fill-rule="evenodd" clip-rule="evenodd"
                 image-rendering="optimizeQuality" shape-rendering="geometricPrecision"
                 text-rendering="geometricPrecision" viewBox="0 0 6.827 6.827" id="islam">
                 <path fill-rule="nonzero"
@@ -79,7 +79,7 @@
             </div>
             Selamat datang bulan Ramadan!
             <svg data-tooltip-target="tooltip-two" xmlns="http://www.w3.org/2000/svg"
-                class="w-28 h-28 sm:w-10 sm:h-10 ml-3" fill-rule="evenodd" clip-rule="evenodd"
+                class="w-20 h-20 sm:w-10 sm:h-10 ml-3" fill-rule="evenodd" clip-rule="evenodd"
                 image-rendering="optimizeQuality" shape-rendering="geometricPrecision"
                 text-rendering="geometricPrecision" viewBox="0 0 6.827 6.827" id="islam">
                 <path fill-rule="nonzero"
