--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    <section class="overflow-x-hidden overflow-y-hidden parallax_mobile sm:parallax lg:parallax_first md:parallax_mid xl:parallax_second 2xl:parallax_third">
+    <section class="overflow-x-hidden overflow-y-hidden parallax_mobile lg:parallax md:parallax_mid xl:parallax_second 2xl:parallax_third">
         <!-- <img src="" id="struktur" alt="structure"> -->
         <img src="example/bolls/Another Design/new_bg.png" id="bg" alt="bg" />
         <img src="example/bolls/Another Design/shadow_left.png" id="shadow_left" alt="shadow_left" />
