Added some new line

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         </div>
     </nav>
 
-    <section class="overflow-x-hidden overflow-y-hidden parallax_mobile lg:parallax md:parallax_mid xl:parallax_second 2xl:parallax_third">
+    <section
+        class="overflow-x-hidden overflow-y-hidden parallax_mobile lg:parallax md:parallax_mid xl:parallax_second 2xl:parallax_third">
         <!-- <img src="" id="struktur" alt="structure"> -->
         <img src="example/bolls/Another Design/new_bg.png" id="bg" alt="bg" />
         <img src="example/bolls/Another Design/shadow_left.png" id="shadow_left" alt="shadow_left" />
@@ -257,7 +258,7 @@
         </div>
     </section>
 
-    <section class="sec bg-slate-700">
+    <section class="sec bg-gradient-to-r from-blue-950 to-blue-500 background-animate">
         <h2 class="text-xs text-center sm:text-left sm:text-3xl font-semibold text-white flex flex-row">
             Apa itu Puasa?
             <svg data-tooltip-target="tooltip-calendar" xmlns="http://www.w3.org/2000/svg"
@@ -306,6 +307,10 @@
                         Sedekah itu amalan baik. Jadi sekiranya tidak keberatan, support saya dengan tekan link
                         dibawah.<br>👇👇👇
                     </p>
+                    <div class="hidden lg:flex">
+                        <img class="w-full transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg"
+                            src="qr.png" alt="qr duit raya">
+                    </div>
                     <div class="mx-auto lg:mx-0 xl:mx-0 sm:mx-0">
                         <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
                             data-name="bmc-button" data-slug="YOLOGIT" data-color="#FF5F5F" data-emoji=""
@@ -323,7 +328,7 @@
         </div>
     </section>
 
-    <section class="sec bg-slate-700">
+    <section class="sec bg-gradient-to-r from-blue-950 to-blue-500 background-animate">
         <h2 class="text-xs sm:text-3xl text-center sm:text-left font-semibold text-white flex flex-row">
             Jangan Lupa Puasa!
             <svg class="w-28 h-28 sm:w-10 sm:h-10 ml-3" data-slot="icon" fill="currentColor" viewBox="0 0 20 20"
@@ -407,7 +412,7 @@
     <footer class="bg-gray-800 text-white py-8">
         <div class="max-w-6xl mx-auto text-center sm:text-left">
             <div>
-                <p class="text-lg font-mono">&copy; 2024 YOLO-GIT PROPERTY</p>
+                <p class="text-lg font-mono">&copy; 2025 YOLO-GIT PROPERTY</p>
             </div>
         </div>
     </footer>
