Update some lines

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
                 <img data-modal-target="default-one" data-modal-toggle="default-one" class="rounded-t-lg"
-                    src="example/bolls/Card/card_1.png" alt="" />
+                    src="example/bolls/Card/card_1.webp" alt="" />
             </div>
         </div>
         <div id="default-one" tabindex="-1" aria-hidden="true"
@@ -130,7 +130,7 @@
             <div class="relative p-4 w-full max-w-2xl max-h-full">
                 <!-- Modal content -->
                 <div class="relative bg-slate-800 rounded-lg shadow">
-                    <img src="example/bolls/Card/card_1.png">
+                    <img src="example/bolls/Card/card_1.webp">
                     <!-- Modal footer -->
                     <div
                         class="flex items-center justify-between p-2 md:p-4 border-t border-gray-200 rounded-b dark:border-gray-600">
@@ -145,7 +145,7 @@
             class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
                 <img data-modal-target="default-two" data-modal-toggle="default-two" class="rounded-t-lg"
-                    src="example/bolls/Card/card_2.png" alt="" />
+                    src="example/bolls/Card/card_2.webp" alt="" />
             </div>
         </div>
         <div id="default-two" tabindex="-1" aria-hidden="true"
@@ -153,7 +153,7 @@
             <div class="relative p-4 w-full max-w-2xl max-h-full">
                 <!-- Modal content -->
                 <div class="relative bg-slate-800 rounded-lg shadow">
-                    <img src="example/bolls/Card/card_2.png">
+                    <img src="example/bolls/Card/card_2.webp">
                     <!-- Modal footer -->
                     <div
                         class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
@@ -168,7 +168,7 @@
             class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
                 <img data-modal-target="default-three" data-modal-toggle="default-three" class="rounded-t-lg"
-                    src="example/bolls/Card/card_3.png" alt="" />
+                    src="example/bolls/Card/card_3.webp" alt="" />
             </div>
         </div>
         <div id="default-three" tabindex="-1" aria-hidden="true"
@@ -176,7 +176,7 @@
             <div class="relative p-4 w-full max-w-2xl max-h-full">
                 <!-- Modal content -->
                 <div class="relative bg-slate-800 rounded-lg shadow">
-                    <img src="example/bolls/Card/card_3.png">
+                    <img src="example/bolls/Card/card_3.webp">
                     <!-- Modal footer -->
                     <div
                         class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
@@ -191,7 +191,7 @@
             class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
                 <img data-modal-target="default-four" data-modal-toggle="default-four" class="rounded-t-lg"
-                    src="example/bolls/Card/card_4.png" alt="" />
+                    src="example/bolls/Card/card_4.webp" alt="" />
             </div>
         </div>
         <div id="default-four" tabindex="-1" aria-hidden="true"
@@ -199,7 +199,7 @@
             <div class="relative p-4 w-full max-w-2xl max-h-full">
                 <!-- Modal content -->
                 <div class="relative bg-slate-800 rounded-lg shadow">
-                    <img src="example/bolls/Card/card_4.png">
+                    <img src="example/bolls/Card/card_4.webp">
                     <!-- Modal footer -->
                     <div
                         class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
@@ -214,7 +214,7 @@
             class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
                 <img data-modal-target="default-five" data-modal-toggle="default-five" class="rounded-t-lg"
-                    src="example/bolls/Card/card_5.png" alt="" />
+                    src="example/bolls/Card/card_5.webp" alt="" />
             </div>
         </div>
         <div id="default-five" tabindex="-1" aria-hidden="true"
@@ -222,7 +222,7 @@
             <div class="relative p-4 w-full max-w-2xl max-h-full">
                 <!-- Modal content -->
                 <div class="relative bg-slate-800 rounded-lg shadow">
-                    <img src="example/bolls/Card/card_5.png">
+                    <img src="example/bolls/Card/card_5.webp">
                     <!-- Modal footer -->
                     <div
                         class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
@@ -237,7 +237,7 @@
             class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
                 <img data-modal-target="default-six" data-modal-toggle="default-six" class="rounded-t-lg"
-                    src="example/bolls/Card/card_6.png" alt="" />
+                    src="example/bolls/Card/card_6.webp" alt="" />
             </div>
         </div>
         <div id="default-six" tabindex="-1" aria-hidden="true"
@@ -245,7 +245,7 @@
             <div class="relative p-4 w-full max-w-2xl max-h-full">
                 <!-- Modal content -->
                 <div class="relative bg-slate-800 rounded-lg shadow">
-                    <img src="example/bolls/Card/card_6.png">
+                    <img src="example/bolls/Card/card_6.webp">
                     <!-- Modal footer -->
                     <div
                         class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
@@ -307,10 +307,6 @@
                         Sedekah itu amalan baik. Jadi sekiranya tidak keberatan, support saya dengan tekan link
                         dibawah.<br>👇👇👇
                     </p>
-                    <div class="hidden lg:flex">
-                        <img class="w-full transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg"
-                            src="qr.png" alt="qr duit raya">
-                    </div>
                     <div class="mx-auto lg:mx-0 xl:mx-0 sm:mx-0">
                         <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
                             data-name="bmc-button" data-slug="YOLOGIT" data-color="#FF5F5F" data-emoji=""
